apply se-codestyle to java