@@ -17,248 +17,162 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class CDTypeFacade {
-
+  
   /** Class that helps with the creation of ASTCDType */
   private static CDTypeFacade cdTypeFacade;
-
+  
   private final MCTypeFacade mcTypeFacade;
-
+  
   private CDTypeFacade() {
     this.mcTypeFacade = MCTypeFacade.getInstance();
   }
-
+  
   public static CDTypeFacade getInstance() {
     if (cdTypeFacade == null) {
       cdTypeFacade = new CDTypeFacade();
     }
     return cdTypeFacade;
   }
-
+  
   /** delegation methods for a more comfortable usage */
-
+  
   /*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*\
   | CDClass                                                                   |
   \*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*/
-
+  
   public ASTCDClass createCDClass(final String name) {
     return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name).build();
   }
-
+  
   public ASTCDClass createCDClass(final String name, List<String> interfaces) {
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeMill.cDInterfaceUsageBuilder()
-            .addAllInterface(
-                interfaces.stream()
-                    .map(mcTypeFacade::createQualifiedType)
-                    .collect(Collectors.toList()))
-            .build();
-    return CD4CodeMill.cDClassBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDInterfaceUsage(interfaceUsage)
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(
+        interfaces.stream().map(mcTypeFacade::createQualifiedType).collect(Collectors.toList()))
         .build();
+    return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name)
+        .setCDInterfaceUsage(interfaceUsage).build();
   }
-
+  
   public ASTCDClass createCDClass(final String name, String... interfaces) {
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeMill.cDInterfaceUsageBuilder()
-            .addAllInterface(
-                Arrays.stream(interfaces)
-                    .map(mcTypeFacade::createQualifiedType)
-                    .collect(Collectors.toList()))
-            .build();
-    return CD4CodeMill.cDClassBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDInterfaceUsage(interfaceUsage)
-        .build();
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(
+        Arrays.stream(interfaces).map(mcTypeFacade::createQualifiedType).collect(Collectors
+            .toList())).build();
+    return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name)
+        .setCDInterfaceUsage(interfaceUsage).build();
   }
-
+  
   public ASTCDClass createCDClass(final String name, String superClass, List<String> interfaces) {
-    ASTCDExtendUsage cdExtend =
-        CD4CodeBasisMill.cDExtendUsageBuilder()
-            .addSuperclass(mcTypeFacade.createQualifiedType(superClass))
-            .build();
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeMill.cDInterfaceUsageBuilder()
-            .addAllInterface(
-                interfaces.stream()
-                    .map(mcTypeFacade::createQualifiedType)
-                    .collect(Collectors.toList()))
-            .build();
-    return CD4CodeMill.cDClassBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(cdExtend)
-        .setCDInterfaceUsage(interfaceUsage)
+    ASTCDExtendUsage cdExtend = CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(mcTypeFacade
+        .createQualifiedType(superClass)).build();
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(
+        interfaces.stream().map(mcTypeFacade::createQualifiedType).collect(Collectors.toList()))
         .build();
+    return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name).setCDExtendUsage(
+        cdExtend).setCDInterfaceUsage(interfaceUsage).build();
   }
-
+  
   public ASTCDClass createCDClass(final String name, String superClass, String... interfaces) {
-    ASTCDExtendUsage cdExtend =
-        CD4CodeBasisMill.cDExtendUsageBuilder()
-            .addSuperclass(mcTypeFacade.createQualifiedType(superClass))
-            .build();
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeMill.cDInterfaceUsageBuilder()
-            .addAllInterface(
-                Arrays.stream(interfaces)
-                    .map(mcTypeFacade::createQualifiedType)
-                    .collect(Collectors.toList()))
-            .build();
-    return CD4CodeMill.cDClassBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(cdExtend)
-        .setCDInterfaceUsage(interfaceUsage)
-        .build();
+    ASTCDExtendUsage cdExtend = CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(mcTypeFacade
+        .createQualifiedType(superClass)).build();
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(
+        Arrays.stream(interfaces).map(mcTypeFacade::createQualifiedType).collect(Collectors
+            .toList())).build();
+    return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name).setCDExtendUsage(
+        cdExtend).setCDInterfaceUsage(interfaceUsage).build();
   }
-
-  public ASTCDClass createCDClass(
-      final String name, final ASTMCObjectType superClass, List<ASTMCObjectType> interfaces) {
-    ASTCDExtendUsage cdExtend =
-        CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(superClass).build();
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(interfaces).build();
-    return CD4CodeMill.cDClassBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(cdExtend)
-        .setCDInterfaceUsage(interfaceUsage)
+  
+  public ASTCDClass createCDClass(final String name, final ASTMCObjectType superClass,
+      List<ASTMCObjectType> interfaces) {
+    ASTCDExtendUsage cdExtend = CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(superClass)
         .build();
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(
+        interfaces).build();
+    return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name).setCDExtendUsage(
+        cdExtend).setCDInterfaceUsage(interfaceUsage).build();
   }
-
-  public ASTCDClass createCDClass(
-      final String name, final ASTMCObjectType superClass, ASTMCObjectType... interfaces) {
-    ASTCDExtendUsage cdExtend =
-        CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(superClass).build();
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(Arrays.asList(interfaces)).build();
-    return CD4CodeMill.cDClassBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(cdExtend)
-        .setCDInterfaceUsage(interfaceUsage)
+  
+  public ASTCDClass createCDClass(final String name, final ASTMCObjectType superClass,
+      ASTMCObjectType... interfaces) {
+    ASTCDExtendUsage cdExtend = CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(superClass)
         .build();
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(
+        Arrays.asList(interfaces)).build();
+    return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name).setCDExtendUsage(
+        cdExtend).setCDInterfaceUsage(interfaceUsage).build();
   }
-
+  
   public ASTCDClass createCDClass(final String name, String superClass) {
-    ASTCDExtendUsage cdExtend =
-        CD4CodeBasisMill.cDExtendUsageBuilder()
-            .addSuperclass(mcTypeFacade.createQualifiedType(superClass))
-            .build();
-    return CD4CodeMill.cDClassBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(cdExtend)
-        .build();
+    ASTCDExtendUsage cdExtend = CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(mcTypeFacade
+        .createQualifiedType(superClass)).build();
+    return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name).setCDExtendUsage(
+        cdExtend).build();
   }
-
+  
   public ASTCDClass createCDClass(final String name, final ASTMCObjectType superClass) {
-    ASTCDExtendUsage cdExtend =
-        CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(superClass).build();
-    return CD4CodeMill.cDClassBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(cdExtend)
+    ASTCDExtendUsage cdExtend = CD4CodeBasisMill.cDExtendUsageBuilder().addSuperclass(superClass)
         .build();
+    return CD4CodeMill.cDClassBuilder().setModifier(PUBLIC.build()).setName(name).setCDExtendUsage(
+        cdExtend).build();
   }
-
+  
   /*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*\
   | CDInterface                                                               |
   \*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*/
-
+  
   public ASTCDInterface createCDInterface(final String name) {
     return CD4CodeMill.cDInterfaceBuilder().setModifier(PUBLIC.build()).setName(name).build();
   }
-
+  
   public ASTCDInterface createCDInterface(final String name, List<String> interfaces) {
-    ASTCDExtendUsage extendUsage =
-        CD4CodeMill.cDExtendUsageBuilder()
-            .addAllSuperclass(
-                interfaces.stream()
-                    .map(mcTypeFacade::createQualifiedType)
-                    .collect(Collectors.toList()))
-            .build();
-    return CD4CodeMill.cDInterfaceBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(extendUsage)
-        .build();
+    ASTCDExtendUsage extendUsage = CD4CodeMill.cDExtendUsageBuilder().addAllSuperclass(interfaces
+        .stream().map(mcTypeFacade::createQualifiedType).collect(Collectors.toList())).build();
+    return CD4CodeMill.cDInterfaceBuilder().setModifier(PUBLIC.build()).setName(name)
+        .setCDExtendUsage(extendUsage).build();
   }
-
+  
   public ASTCDInterface createCDInterface(final String name, String... interfaces) {
-    ASTCDExtendUsage extendUsage =
-        CD4CodeMill.cDExtendUsageBuilder()
-            .addAllSuperclass(
-                Arrays.stream(interfaces)
-                    .map(mcTypeFacade::createQualifiedType)
-                    .collect(Collectors.toList()))
-            .build();
-    return CD4CodeMill.cDInterfaceBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(extendUsage)
+    ASTCDExtendUsage extendUsage = CD4CodeMill.cDExtendUsageBuilder().addAllSuperclass(Arrays
+        .stream(interfaces).map(mcTypeFacade::createQualifiedType).collect(Collectors.toList()))
         .build();
+    return CD4CodeMill.cDInterfaceBuilder().setModifier(PUBLIC.build()).setName(name)
+        .setCDExtendUsage(extendUsage).build();
   }
-
+  
   public ASTCDInterface createCDInterface(final String name, ASTMCObjectType... interfaces) {
-    ASTCDExtendUsage cdExtend =
-        CD4CodeBasisMill.cDExtendUsageBuilder().addAllSuperclass(Arrays.asList(interfaces)).build();
-    return CD4CodeMill.cDInterfaceBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDExtendUsage(cdExtend)
-        .build();
+    ASTCDExtendUsage cdExtend = CD4CodeBasisMill.cDExtendUsageBuilder().addAllSuperclass(Arrays
+        .asList(interfaces)).build();
+    return CD4CodeMill.cDInterfaceBuilder().setModifier(PUBLIC.build()).setName(name)
+        .setCDExtendUsage(cdExtend).build();
   }
-
+  
   /*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*\
   | CDEnum                                                                    |
   \*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*/
-
+  
   public ASTCDEnum createCDEnum(final String name) {
     return CD4CodeMill.cDEnumBuilder().setModifier(PUBLIC.build()).setName(name).build();
   }
-
+  
   public ASTCDEnum createCDEnum(final String name, List<String> interfaces) {
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeMill.cDInterfaceUsageBuilder()
-            .addAllInterface(
-                interfaces.stream()
-                    .map(mcTypeFacade::createQualifiedType)
-                    .collect(Collectors.toList()))
-            .build();
-    return CD4CodeMill.cDEnumBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDInterfaceUsage(interfaceUsage)
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(
+        interfaces.stream().map(mcTypeFacade::createQualifiedType).collect(Collectors.toList()))
         .build();
+    return CD4CodeMill.cDEnumBuilder().setModifier(PUBLIC.build()).setName(name)
+        .setCDInterfaceUsage(interfaceUsage).build();
   }
-
+  
   public ASTCDEnum createCDEnum(final String name, String... interfaces) {
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeMill.cDInterfaceUsageBuilder()
-            .addAllInterface(
-                Arrays.stream(interfaces)
-                    .map(mcTypeFacade::createQualifiedType)
-                    .collect(Collectors.toList()))
-            .build();
-    return CD4CodeMill.cDEnumBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDInterfaceUsage(interfaceUsage)
-        .build();
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeMill.cDInterfaceUsageBuilder().addAllInterface(
+        Arrays.stream(interfaces).map(mcTypeFacade::createQualifiedType).collect(Collectors
+            .toList())).build();
+    return CD4CodeMill.cDEnumBuilder().setModifier(PUBLIC.build()).setName(name)
+        .setCDInterfaceUsage(interfaceUsage).build();
   }
-
+  
   public ASTCDEnum createCDEnum(final String name, ASTMCObjectType... interfaces) {
-    ASTCDInterfaceUsage interfaceUsage =
-        CD4CodeBasisMill.cDInterfaceUsageBuilder()
-            .addAllInterface(Arrays.asList(interfaces))
-            .build();
-    return CD4CodeMill.cDEnumBuilder()
-        .setModifier(PUBLIC.build())
-        .setName(name)
-        .setCDInterfaceUsage(interfaceUsage)
-        .build();
+    ASTCDInterfaceUsage interfaceUsage = CD4CodeBasisMill.cDInterfaceUsageBuilder().addAllInterface(
+        Arrays.asList(interfaces)).build();
+    return CD4CodeMill.cDEnumBuilder().setModifier(PUBLIC.build()).setName(name)
+        .setCDInterfaceUsage(interfaceUsage).build();
   }
+  
 }
